examples/test/testpolicy8212.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8212
  namespace: namespace247
spec:
  podSelector:
    matchLabels:
      key2: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value6
          key38: value7
      podSelector:
        matchLabels:
          key39: value48
          key28: value6
